correcting banner on mobile devices
--> Trying to correct intro banner on mobile devices. The parallax effect was showing a blank space when scrolled.

--- a/css/styles-768max.css
+++ b/css/styles-768max.css
@@ -14,6 +14,11 @@ section#intro_banner{
    height: 90vw;
 }
 
+div#intro_banner_bg{
+   bottom: unset;
+   top: -10vw;
+}
+
 #courses_list > li{
    flex: 45%;
    height: 45vw;
